#2; Prevent URL strings causing overflow

--- a/wwwroot/app.compiled.css
+++ b/wwwroot/app.compiled.css
@@ -789,6 +789,10 @@ main {
   background-color: rgb(29 78 216 / var(--tw-bg-opacity));
 }
 
+a {
+  word-break: break-all;
+}
+
 a:hover, .sg-post-content a:hover {
   text-decoration: none;
   color: #6b7280;
