--- a/wwwroot/app.css
+++ b/wwwroot/app.css
@@ -32,6 +32,10 @@ main {
     @apply bg-blue-700;
 }
 
+a {
+    word-break: break-all;
+}
+
 a:hover, .sg-post-content a:hover {
     text-decoration: none;
     color: theme('colors.gray.500');
